crates/hir-ty/tests/snapshots/jls_variable_annotations__var_local_variable_declaration.snap
---
source: crates/hir-ty/tests/jls_variable_annotations.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE) @interface TYPE_USE {}
@Target(ElementType.LOCAL_VARIABLE) @interface LOCAL_VARIABLE {}
@Target(ElementType.PARAMETER) @interface PARAMETER {}
@Target(ElementType.FIELD) @interface FIELD {}
@Target(ElementType.METHOD) @interface METHOD {}

class Anns {
void locals() {
        @TYPE_USE var annotated = 0;
        @LOCAL_VARIABLE var ok = 0;
        var plain = 0;
        for (@TYPE_USE var init = 0; init < 1; init++) {
        }
    }
}

@13:9: annotated-var: 'var' type may not be annotated
@16:14: annotated-var: 'var' type may not be annotated
